layout in index fixed ratio so no big gaps

--- a/exercise/styles.css
+++ b/exercise/styles.css
@@ -1,7 +1,5 @@
 
-*{
-    box-sizing: border-box;
-}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #87CEEB;
@@ -10,14 +8,14 @@ body {
 body
 {
     display:grid;
-    grid-template-rows:1fr 15fr 1fr;
+    grid-template-rows:1fr 3/5fr 1fr;
     grid-template-areas:
    "header"
    "main"
    "footer";
     
     row-gap: 10px;
-    height: 100vh;
+
    
 }
 #index-main
@@ -25,35 +23,86 @@ body
 grid-area:main;
 display:grid;
 grid-template-columns:1fr 1fr;
-grid-template-rows: 2fr 1fr;
+
 grid-template-areas: 
     "facts facts"
     "race store";
     column-gap: 10px;
     row-gap: 10px;
+    
 ;
 }
 #FunFacts{
     grid-area: facts;
-
+    display:grid;
+    grid-template-columns: 1fr 3fr;
+    
+    grid-template-areas: 
+        "img headline"
+        "img li"
+    ;
+  max-height:auto ;
+  
+}
+#FunFacts img{
+   display: flex;
+    grid-area: img;
+    
+}
+#FunFacts h2{
+    grid-area: headline;
+    margin-top: auto;
+    margin-bottom: 10px;
+    margin-left: 15px;
+    padding-left: 10px;
+}
+#FunFacts li{
+    grid-area: li;
 }
 #PopRace{
     grid-area: race;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-bottom: 30px;
+    display:flex;
+    
+
 
 }
+#PopRace img{
+    order:-1;
+    height:100px;
+}
+#PopRace h2{
+    flex-direction: rows;
+    text-align: center;
+}
+
+
 #StoreLink
 {
     grid-area: store;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    
 }
 body > header
 {
     grid-area: header;
     
-    align-content:left ;
+   display: flex;
+   justify-content: space-between;
+    align-items: center;
 
 }
 
 
+header nav{
+    margin-left: auto;
+    flex-direction:columns;
+    
+}
 
 footer
 {grid-area:footer;}
@@ -64,31 +113,38 @@ nav ul {
 }
 
 nav ul li {
-    list-style: none;
-    width: 30%;
+    list-style:none;
+    width: 100%;
     background-color: #00afef;
     border-radius: 5px;
     text-align: center;
     line-height: 50px;
+    text-emphasis: bold;
+
+    
 }
 
 header img {
+    flex: start;
     height: 100px;
     width: auto;
 }
 header h1 {
     padding-left: 20px;
     padding-top: 10px;
+    margin-right: auto;
 }
 
 main img {
+    
     object-fit: cover;
     margin-right: 20px;
     height: 350px;
-    width: 35%;
+    width: auto;
 }
 
 section li:before {
+  
     content: '🍡';
     margin-left: -31px;
     padding-right: 8px;
@@ -99,7 +155,7 @@ section li:before {
     border-radius: 5px;
     padding: 20px;
 }
-main li
+#index-main li
 {list-style:none;}
 .store-button { /* used for store link in "Get refreshed" section */
     width: 25%;
@@ -110,20 +166,31 @@ main li
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
+    padding-right: 100px;
+    padding-left: 100px;
 }
 /*form starts here */
 #form-main li
 {
-   text-align:left;
+   display: block;
+    text-align:center;
   width:fit-content;
   
-
-
-    
+ 
+   
 }
 
 #submit{
     background-color: #00afef;
     border-radius: 5px;
+    border-color: #00afef;;
+    text-emphasis: bold;
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
+
+
 
